[package]
name = "actix_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" , features = ["server", "transport-sse-server", "transport-io"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
